fixed spacing bug

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ img {
 body {
     font-family: "Neue Montreal", Helvetica, sans-serif;
     font-size: 12pt;
-    font-weight 500;
+    font-weight: 500;
     background-color: #161616;
     text-align: center;
 }
